# plant_detect2

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml  remove_tensorflow.patch  requirements.txt  requirements2.txt
backend/: pytest.ini  requirements.txt
backend/tests/: conftest.py  test_api.py  test_deploy_script.py  test_metrics_store.py  test_monitoring.py  test_timm_predictor.py  test_wandb_loader.py
docker/: backend.Dockerfile
docs/: Collecte_des_données copy.md  Collecte_des_données.md  MLops.md  _config.yml  data_collection.md  deploiement.md  frontend.md  index.md  instructions.md  model_training.md  perspectives.md  test.md
docs/MLops/: etape-1-selection.md  etape-2-performances.md  etape-3-production.md
docs/collecte/: description.md  etape-1-clustering.md  resultats.md  (+9 more)
frontend/: fiches.json  fiches_ill.json  i18n.py  main.py  requirements.txt  styles.py  suggestions.json  utils.py
notebooks/: 02_clustering_xgboost.ipynb  Training_pytorch_colab.ipynb  benchmark_models.ipynb  benchmark_models_colab.ipynb  confidence_exploration.ipynb  confidence_exploration_colab.ipynb  convnext_tiny_full_pipeline.ipynb  convnext_tiny_full_pipeline_colab.ipynb  dataset_combined.csv  efficientB3_pytorch.ipynb  efficient_B3_pytorch_colab.ipynb  efficient_B3_pytorch_colab_2.ipynb  evaluation_models.ipynb  predict.ipynb  sandbank2.ipynb  sandbanks.ipynb  scrapping.ipynb  scrapping_flowers.ipynb  sort_app.py  training.ipynb  training.py  training_pytorch.ipynb  training_sklearn.ipynb
scrap/: script.ipynb
scripts/: deploy_models.py  setup_gcs_bucket.sh
(+41 files in other folders)
